Fixed issue with history header button being wrong color

--- a/src/site/shared/containers/Header/Left/index.scss
+++ b/src/site/shared/containers/Header/Left/index.scss
@@ -89,7 +89,6 @@
 
         img {
             height: $header-history-height;
-            filter: invert(.55);
         }
     }
     &__lock {
